Some prettier text around the specifications and implementations sections

--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@ utility that has made JSON popular.</p>
 <h3>
 <a id="specification" class="anchor" href="#specification" aria-hidden="true"><span class="octicon octicon-link"></span></a>Specification</h3>
 
-<p><a href="https://www.ietf.org/internet-drafts/draft-newton-json-content-rules-05.txt">draft-newton-json-content-rules-05.txt</a></p>
+<p>For more details read the latest specification at <a href="https://www.ietf.org/internet-drafts/draft-newton-json-content-rules-05.txt">draft-newton-json-content-rules-05.txt</a></p>
 
 <h3>
 <a id="implementations" class="anchor" href="#implementations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Implementations</h3>
+
+<p>A number of implementations are under development to verify the JCR syntax.  These include:</p>
 
 <p><a href="https://github.com/arineng/jcrvalidator">Ruby jcrvalidator (Work in Progress)</a><br>
 <a href="https://github.com/codalogic/cl-jcr-parser">C++ cl-jcr-parser (Work in Progress)</a></p>
