"booleans" to "Booleans"

--- a/draft-newton-json-content-rules-10-pjc.html
+++ b/draft-newton-json-content-rules-10-pjc.html
@@ -1257,7 +1257,7 @@ $dice_throws = ( 1..6 +%2 )
 <p id="rfc.section.6.11.1.p.2">A value specified to be 'null' MUST be represented in a JSON instance by the JSON 'null' value.  </p>
 <h1 id="rfc.section.6.11.2">
 <a href="#rfc.section.6.11.2">6.11.2.</a> Booleans</h1>
-<p id="rfc.section.6.11.2.p.1">Type specifications for booleans take the following forms: </p>
+<p id="rfc.section.6.11.2.p.1">Type specifications for Booleans take the following forms: </p>
 <div id="rfc.figure.34"></div>
 <div id="primitive_boolean.jcr"></div>
 <pre>true
