--- a/draft-newton-json-content-rules-10-pjc.html
+++ b/draft-newton-json-content-rules-10-pjc.html
@@ -454,7 +454,7 @@
 
   <meta name="dct.creator" content="Newton, A. and P. Cordell" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-newton-json-content-rules-10" />
-  <meta name="dct.issued" scheme="ISO8601" content="2019-07" />
+  <meta name="dct.issued" scheme="ISO8601" content="2019-09" />
   <meta name="dct.abstract" content="This document describes a language for specifying and testing the expected content of JSON structures found in JSON-using protocols, software, and processes.  " />
   <meta name="description" content="This document describes a language for specifying and testing the expected content of JSON structures found in JSON-using protocols, software, and processes.  " />
 
@@ -478,12 +478,12 @@
 <td class="right">P. Cordell</td>
 </tr>
 <tr>
-<td class="left">Expires: November 8, 2019</td>
+<td class="left">Expires: November 10, 2019</td>
 <td class="right">Codalogic</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">May 7, 2019</td>
+<td class="right">May 9, 2019</td>
 </tr>
 
     	
@@ -499,7 +499,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at https://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on November 8, 2019.</p>
+<p>This Internet-Draft will expire on November 10, 2019.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2019 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (https://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -1439,14 +1439,14 @@ base64url
 <h1 id="rfc.section.6.11.6">
 <a href="#rfc.section.6.11.6">6.11.6.</a> Strings with External Specifications</h1>
 <p id="rfc.section.6.11.6.p.1">New types will likely be added as a form of JSON string. Some such formats may have structure that can't easily be represented using regular expressions and other such techniques.  </p>
-<p id="rfc.section.6.11.6.p.2">To address this a @{spec} annotation is used. This annotation contains a uri identifying the format of the string being defined.  </p>
+<p id="rfc.section.6.11.6.p.2">To address this a @{format} annotation is used. This annotation contains a uri identifying the format of the string being defined.  </p>
 <p id="rfc.section.6.11.6.p.3">For example, a fictional JCR ruleset specifying a DNA fingerprint type might be: </p>
 <div id="rfc.figure.46"></div>
 <div id="spec_annotation.jcr"></div>
 <pre># ruleset-id http://bio.example.org/specs/dna
 
 $fingerprint =
-    @{spec http://bio.example.org/specs/dna#fingerprint} string
+    @{format http://bio.example.org/specs/dna#fingerprint} string
 </pre>
 <p class="figure">Figure 46</p>
 <p id="rfc.section.6.11.6.p.4">From a validators perspective, the above type could be considered to be a 'string with the format specified by http://bio.example.org/specs/dna#fingerprint'.  </p>
