--- a/draft-newton-json-content-rules-10-pjc.html
+++ b/draft-newton-json-content-rules-10-pjc.html
@@ -722,8 +722,8 @@
     "tags": {
       "type": "array",
       "items": {
-      "type": "string"
-    },
+        "type": "string"
+      },
     "minItems": 1,
     "uniqueItems": true
     }
@@ -741,7 +741,7 @@
 {
   "id"    : integer,      ; Unique identifier for the product
   "name"  : string,       ; Name of the product
-  "price" : @{min-exclusive} 0.0..,
+  "price" : @{exclude-min} 0.0..,
   "tags"  : [ string + ] ?
 }
                     </pre>
